--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="skills-container">
                 <div class="skill-list">
                     <i class="fa-solid fa-code"></i>
-                    <h4>Web Designe</h4>
-                    <p>Capable of designing a Frontend fully function and responsive websites using HTML,CSS, and JS</p>
+                    <h4>Web Development</h4>
+                    <p>Capable of designing a fully function and responsive Full Stack websites using HTML,CSS,JS,Reat js and Spring Boot</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div class="skill-list">
@@ -102,18 +102,18 @@
             <h2 class="sub-title">My Works</h2>
             <div class="works-container">
                 <div class="work-list">
-                    <h4>Weather<br>Web Application</h4>
-                    <p>A website for weather report using HTML, CSS, JS and API. The Weather data is featched from the API and displayed in the UI designed using HTML and CSS. A rapid API extention is used in the project  </p>
+                    <h4>Plant Marketplace</h4>
+                    <p>The plant marketplace website, built using React.js and Spring Boot, offers a dynamic and user-friendly platform for browsing, buying, and selling plants. It combines an interactive front-end with a reliable back-end for secure transactions and real-time updates. </p>
                     <div class="layer">
-                        <a href="https://mohankumarhr.github.io/weather-website/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-sm"></i></a>
+                        <a href="https://marketofplants.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-sm"></i></a>
                     </div>
                 </div>
                 <div class="work-list">
-                    <h4>tindog<br>Website for Dogs</h4>
-                    <p>Tingog is a fully responsive tinder clone website for dogs to find their love ones built using the HTML, CSS and Bootstrap. bootstrap is a css framework to know more visit the website through the link given
+                    <h4>MovieMingle</h4>
+                    <p>The movie community website, built using React.js and Spring Boot, provides an engaging platform for movie enthusiasts to share reviews, ratings, and discuss films. It features an interactive front-end and a secure back-end for real-time content updates and seamless user interactions.
                     </p>
                     <div class="layer">
-                        <a href="https://mohankumarhr.github.io/website-tindog/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-sm"></i></a>
+                        <a href="https://moviemingle.me/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square fa-sm"></i></a>
                     </div>
                 </div>
                 <div class="work-list">
@@ -136,7 +136,7 @@
                 <div class="col-left">
                     <h2 class="sub-title">Contact Me</h2>
                     <p><i class="fa-solid fa-paper-plane"></i><a href="mailto:mohankumarhr2003@gmail.com">mohankumarhr2003@gmail.com</a></p>
-                    <p><i class="fa-solid fa-phone"></i>+91 9353931337</p>
+                    <p><i class="fa-solid fa-phone"></i>9353931337</p>
                     <div class="socialmedia-icons">
                         <a href="https://www.linkedin.com/in/mohan-kumar-hr-a3008a24a"><i class="fa-brands fa-linkedin"></i></a> 
                         <a href="https://www.facebook.com/mohan.kumarhr.564?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
